--- a/package.json
+++ b/package.json
@@ -1,17 +1,37 @@
 {
-  "name": "tamagotchi-react",
+  "name": "definitive-tamagotchi",
+  "homepage": "chrismcrow.github.io/definitive-tamagotchi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
+    "bootstrap": "^4.1.3",
+    "css-loader": "^1.0.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6",
+    "prop-types": "^15.5.10",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-router-dom": "^4.0.0",
+    "react-scripts": "2.1.1",
+    "style-loader": "^0.23.1",
+    "styled-jsx": "^3.1.2"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^2.29.0",
+    "img-loader": "^3.0.1",
+    "uuid": "^3.3.2",
+    "webpack": "^4.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
