scceed to deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "definitive-tamagotchi",
-  "homepage": "chrismcrow.github.io/definitive-tamagotchi",
+  "name": "tamagotchi-deploy",
+  "homepage": "https://melyasuda.github.io/tamagotchi-deploy/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,12 +26,12 @@
     "webpack": "^4.19.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
